--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,19 @@ plugins {
 }
 apply plugin: "io.spinnaker.plugin.bundler"
 
+// Add resolution strategy for Groovy conflicts
+allprojects {
+  configurations.all {
+    resolutionStrategy {
+      force 'org.apache.groovy:groovy:4.0.15'
+      force 'org.apache.groovy:groovy-json:4.0.15'
+      
+      // Exclude the conflicting Groovy module
+      exclude group: 'org.codehaus.groovy', module: 'groovy'
+    }
+  }
+}
+
 spinnakerBundle {
   pluginId = "AWS.AccountRegistration"
   description = "AWS account registration."
