--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 # org.gradle.parallel=true
 version=1.3.0
-spinnakerGradleVersion=8.12.0
+spinnakerGradleVersion=8.32.1
 pf4jVersion=3.2.0
-korkVersion=7.245.1
-clouddriverVersion=5.90.1
-fiatVersion=1.51.1
+korkVersion=7.251.0
+clouddriverVersion=5.91.5
+fiatVersion=1.54.1
+org.gradle.jvmargs=-Xmx4g -Xms4g --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
